kubernetes/zookeeper/zookeeper.yml
# Licensed to the Apache Software Foundation (ASF) under one or more contributor
# license agreements; and to You under the Apache License, Version 2.0.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: zookeeper
  namespace: openwhisk
  labels:
    name: zookeeper
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: zookeeper
    spec:
      restartPolicy: Always
      volumes:
      - name: zk-data
        persistentVolumeClaim:
          claimName: pv-zookeeper-data-01
      - name: zk-datalog
        persistentVolumeClaim:
          claimName: pv-zookeeper-datalog-01

      affinity:
        # prefer to not run on an invoker node (only prefer because of single node clusters)
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: openwhisk-role
                operator: NotIn
                values:
                - invoker
        # prefer to run on a control-plane node
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 50
            preference:
              matchExpressions:
              - key: openwhisk-role
                operator: In
                values:
                - control-plane
        # do not allow more than 1 zookeeper instance to run on a given node
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
                - key: name
                  operator: In
                  values:
                  - zookeeper
            topologyKey: "kubernetes.io/hostname"

      containers:
      - name: zookeeper
        image: zookeeper:3.4
        imagePullPolicy: IfNotPresent
        ports:
        - name: zookeeper
          containerPort: 2181
        - name: server
          containerPort: 2888
        - name: leader-election
          containerPort: 3888
        volumeMounts:
        - mountPath: /data
          name: zk-data
        - mountPath: /datalog
          name: zk-datalog
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: zookeeper-netpol
  namespace: openwhisk
spec:
  podSelector:
    matchLabels:
      name: zookeeper
  ingress:
  # Allow kafka and invoker to connect to zookeeper
  - from:
    - podSelector:
        matchLabels:
          name: kafka
    - podSelector:
        matchLabels:
          name: invoker
    ports:
     - port: 2181
  # zookeepers can connect to each other
  - from:
    - podSelector:
        matchLabels:
          name: zookeeper
    ports:
     - port: 2181
     - port: 2888
     - port: 3888
